syntax = "proto3";
option go_package = "go.viam.com/utils/proto/rpc/examples/fileupload/v1";

package proto.rpc.examples.fileupload.v1;

message UploadFileRequest {
  oneof data {
    string name = 1;
    bytes chunk_data = 2;
  };
}

message UploadFileResponse {
  string name = 1;
  int64 size = 2;
}

service FileUploadService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {}
}
